components/31-molecules/teaser/_teaser.scss
//
// Basic teaser theming.
//
.teaser {
  position: relative;
  list-style: none;

  &.teaser-programme, // Deprecated
  &.teaser--inverted {
    .teaser-content {
      @include theme('background-color', 'color-secondary');
    }

    .content__top, // Deprecated
    .content__first {
      > * {
        margin: 0;
      }
    }

    .content__bottom, // Deprecated
    .content__second {
      padding: .8rem;
    }
  }

  &.teaser-topic, // Deprecated
  &.teaser--underlined {
    .teaser-content {
      @include theme('border-color', 'color-primary--lighten-4', 'teaser-contact-border');

      height: 100%;
      padding-bottom: .7rem;
      border-bottom: 2px solid;
    }

    // @TODO: Move to other layer.
    .ol-popup & {
      padding-bottom: 0;
      border-bottom: 0;
    }

    .content__bottom, // Deprecated
    .content__second {
      display: flex;
      flex-direction: column;
      align-items: flex-start;

      > *:last-child {
        margin-bottom: 0;
      }
    }

    .teaser-title-link {
      margin-bottom: .8rem;
      font-size: .8rem;
      line-height: 1.2rem;
    }

    .read-more {
      margin-top: auto;
    }

    // @TODO: Move to other layer.
    .grid-3 & {
      .content__bottom {
        height: 100%;
      }
    }
  }

  figure {
    figcaption {
      display: none;
    }
  }

  a.teaser-overlay-link {
    @include element-states(transparent, transparent, background-color);

    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    text-indent: 200%;
    white-space: nowrap;
    overflow: hidden;
    z-index: 1;
  }

  a.read-more {
    font-weight: 700;
  }

  .teaser-content {
    display: flex;
    flex-direction: column;

    .teaser-topic-links, // Deprecated
    .teaser-contact-info, // Deprecated
    .teaser-links {
      @extend %list-no-style;

      margin-top: -$link-padding;
      margin-bottom: .4rem;

      a {
        font-weight: normal;
      }
    }

    .content__top, // Deprecated
    .content__first {
      position: relative;
      order: 1;
      overflow: hidden;
    }

    .content__bottom, // Deprecated
    .content__second {
      order: 2;
    }

    .figure-wrapper {
      position: relative;
    }

    h3 {
      margin-bottom: .4rem;
    }

    a {
      position: relative;
      z-index: 2;
    }

    span.teaser-label {
      display: flex;
      position: absolute;
      top: .8rem;
      left: .8rem;
      align-items: center;
      padding: 0 .5em;
      line-height: 2;
      z-index: 1;

      &::before,
      &::after {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border-radius: border-radius('radius-1');
        background-color: color('white');
        content: '';
        z-index: -1;
      }

      &::before {
        @include theme('background-color', 'color-primary--lighten-5', 'teaser-label-background-color');
      }

      i {
        @include theme('color', 'color-primary', 'teaser-label-icon-color');

        margin-right: .2em;
        font-size: 1.1rem;
      }
    }

    p {
      margin-bottom: .4rem;
      line-height: 1.7;
    }

    div.event,
    time.published {
      display: inline-block;
      margin: 0 0 .4rem;
      line-height: 1.5;
    }

    div.event {
      @include icon('calendar');

      display: flex;
      align-items: center;

      &::before {
        padding-right: .5rem;
        font-size: 1.2rem;
      }
    }

    time.published {
      color: color('dark-gray', -1);
      font-style: italic;
      line-height: 2;
    }
  }

  .content__top, // Deprecated
  .content__first {
    > * {
      margin-bottom: .8rem;
    }
  }
}

//
// Teaser wide variant.
//
.teaser.teaser-search, // Deprecated
.teaser.teaser-search-wide, // Deprecated
.teaser.teaser--wide {
  @include tablet {
    dt,
    dd {
      display: inline;
    }
  }

  @include theme('border-color', 'color-primary--lighten-4', 'view-heading-2-border-color');

  padding-top: $gutter-width;
  padding-bottom: $gutter-width;
  border-bottom: 2px solid;

  &:first-of-type {
    @include theme('border-color', 'color-primary--lighten-4', 'view-heading-2-border-color');

    margin-top: $gutter-width;
    border-top: 2px solid;
  }

  dl dd {
    margin: 0;
    padding-left: .5rem;
  }

  .tag,
  .icon-list {
    margin-bottom: .4rem;
  }

  .teaser-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    @include tablet {
      flex-wrap: nowrap;
    }
  }

  .accolade-inverse.bottom-left {
    display:  block;

    @include tablet {
      display: none;
    }
  }

  .accolade-inverse.right-top {
    display:  none;

    @include tablet {
      display: block;
    }
  }

  .content__left, // Deprecated
  .content__first,
  .content__right,  // Deprecated
  .content__second {
    flex-basis: 100%;
  }

  .content__left, // Deprecated
  .content__first {
    order: 1;
    margin-bottom: gutter();

    @include tablet {
      flex-basis: span(2 of 9);
      margin-right: gutter();
      margin-bottom: 0;
    }
  }

  .content__right, // Deprecated
  .content__second {
    order: 2;

    @include tablet {
      flex-basis: span(7 of 9);
    }

    .location {
      font-weight: 700;

      i {
        margin-right: .3rem;
        font-size: 1.5em;
        vertical-align: middle;
      }
    }

    .links {
      margin-bottom: .4rem;

      li {
        margin-right: 0;

        &::after {
          margin-right: .4rem;
          margin-left: .4rem;
          content: '—';
        }

        &:last-of-type::after {
          content: '';
        }
      }
    }
  }
}

